--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
+    "build": "node ./src/scripts/create-env.js && webpack --mode production --config webpack.config.js",
     "start": "webpack serve --mode development"
   },
   "keywords": [
